--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,31 +3,31 @@ server:
   port: 7070
   
 # Set profile and JPA HSQL configuration.
-spring:
-  application:
-    name: bosOrderApi-Service
-  jpa: 
-    database: MYSQL
-    show-sql: true
-    hibernate:
-      ddl-auto: create
-  datasource: 
-    driverClassName: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/bosdb
-    username: root
-    password: root
 #spring:
 #  application:
 #    name: bosOrderApi-Service
 #  jpa: 
-#    database: HSQL
+#    database: MYSQL
+#    show-sql: true
 #    hibernate:
-#      ddl-auto: update
+#      ddl-auto: create
 #  datasource: 
-#    driverClassName: org.hsqldb.jdbcDriver
-#    username: sa
-#    password: 
-#    url: jdbc:hsqldb:file:database/demo/bosDB.db
+#    driverClassName: com.mysql.jdbc.Driver
+#    url: jdbc:mysql://localhost:3306/bosdb
+#    username: root
+#    password: root
+spring:
+  application:
+    name: bosOrderApi-Service
+  jpa: 
+    database: HSQL
+    hibernate:
+      ddl-auto: update
+  datasource: 
+    driverClassName: org.hsqldb.jdbcDriver
+    username: sa
+    password: 
+    url: jdbc:hsqldb:file:database/demo/bosDB.db
     
 # logging support.    
 logging: 
